added basic navigation bar

--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-test
+<!DOCTYPE html>
+
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Yannick Schulz</title>
+        <link rel="stylesheet" href="css/styles.css">
+    </head>
+    <body>
+        <header>
+            <nav class="header-nav">
+                <h1 class="h-nav"><a href="index.html">Yannick Schulz</a></h1>
+                <ul class="nav-menu">
+                    <li class="nav-item"><a href="#">About</a></li>
+                    <li class="nav-item"><a href="#">Photography</a></li>
+                    <li class="nav-item"><a href="#">Illustrations</a></li>
+                </ul>
+            </nav>
+        </header>
+        <main>
+            <p>test paragraph</p>
+        </main>
+    </body>
+</html>
