--- a/photography.html
+++ b/photography.html
@@ -4,8 +4,9 @@
     <head>
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Yannick Schulz</title>
+        <title>Photography</title>
         <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/glightbox.min.css">
     </head>
     <body>
         <header>
@@ -22,5 +23,6 @@
             <p>test paragraph</p>
             <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/auxilliary/test.png" alt="testimage">
         </main>
+        <script src="/js/glightbox.min.js"></script>
     </body>
 </html>
