--- a/photography.html
+++ b/photography.html
@@ -20,9 +20,41 @@
             </nav>
         </header>
         <main>
+            <section class="gallery-container">
+                <div class=""gallery-item>
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg">
+                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" alt="motorcycle" class="gallery-img">
+                    </a>
+                </div>
+                <div class=""gallery-item>
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike2.jpg">
+                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike2.jpg" alt="motorcycle" class="gallery-img">
+                    </a>
+                </div>
+                <div class=""gallery-item>
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike3.jpg">
+                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike3.jpg" alt="motorcycle" class="gallery-img">
+                    </a>
+                </div>
+                <div class=""gallery-item>
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike3.jpg">
+                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike3.jpg" alt="motorcycle" class="gallery-img">
+                    </a>
+                </div>
+                <div class=""gallery-item>
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike4.jpg">
+                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike4.jpg" alt="motorcycle" class="gallery-img">
+                    </a>
+                </div>
+                <div class=""gallery-item>
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike5.jpg">
+                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike5.jpg" alt="motorcycle" class="gallery-img">
+                    </a>
+                </div>
+            </section>
             <p>test paragraph</p>
             <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/auxilliary/test.png" alt="testimage">
         </main>
-        <script src="/js/glightbox.min.js"></script>
+        <script src="/js/glightbox.min.js">const GLightbox({ loop: true; });</script>
     </body>
 </html>
