added first galery in photography page

--- a/photography.html
+++ b/photography.html
@@ -19,42 +19,45 @@
                 </ul>
             </nav>
         </header>
-        <main>
+        <main class ="gallery-page">
             <section class="gallery-container">
-                <div class=""gallery-item>
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg">
+                <div class="gallery-item">
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" class="glightbox">
                         <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" alt="motorcycle" class="gallery-img">
                     </a>
                 </div>
-                <div class=""gallery-item>
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike2.jpg">
+                <div class="gallery-item">
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike2.jpg" class="glightbox">
                         <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike2.jpg" alt="motorcycle" class="gallery-img">
                     </a>
                 </div>
-                <div class=""gallery-item>
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike3.jpg">
+                <div class="gallery-item">
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike3.jpg" class="glightbox">
                         <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike3.jpg" alt="motorcycle" class="gallery-img">
                     </a>
                 </div>
-                <div class=""gallery-item>
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike3.jpg">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike3.jpg" alt="motorcycle" class="gallery-img">
-                    </a>
-                </div>
-                <div class=""gallery-item>
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike4.jpg">
+                <div class="gallery-item">
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike4.jpg" class="glightbox"> 
                         <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike4.jpg" alt="motorcycle" class="gallery-img">
                     </a>
                 </div>
-                <div class=""gallery-item>
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike5.jpg">
+                <div class="gallery-item">
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike5.jpg" class="glightbox">
                         <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike5.jpg" alt="motorcycle" class="gallery-img">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike6.jpg" class="glightbox">
+                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike6.jpg" alt="motorcycle" class="gallery-img">
                     </a>
                 </div>
             </section>
             <p>test paragraph</p>
             <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/auxilliary/test.png" alt="testimage">
         </main>
-        <script src="/js/glightbox.min.js">const GLightbox({ loop: true; });</script>
+        <script src="js/glightbox.min.js"></script>
+        <script type="text/javascript">
+             const lightbox = GLightbox({ loop: true });
+        </script>
     </body>
 </html>
