--- a/photography.html
+++ b/photography.html
@@ -20,6 +20,13 @@
             </nav>
         </header>
         <main class ="gallery-page">
+            <div class="coverphoto">
+                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-photography-cover.jpg" alt="coverphoto silhouette holding a camera">
+            </div>
+            <div class="textbox">
+                <h2>Motorcycles</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
+            </div>
             <section class="gallery-container">
                 <div class="gallery-item">
                     <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" class="glightbox">
