finished cover photo in photography

--- a/photography.html
+++ b/photography.html
@@ -18,11 +18,13 @@
                     <li class="nav-item"><a href="#">Illustrations</a></li>
                 </ul>
             </nav>
-        </header>
-        <main class ="gallery-page">
-            <div class="coverphoto">
+        </header>            
+        <div class="coverphoto">
+            <div class="coverphoto-photo">
                 <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-photography-cover.jpg" alt="coverphoto silhouette holding a camera">
             </div>
+        </div>
+        <main class ="gallery-page">
             <div class="textbox">
                 <h2>Motorcycles</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
