started the illustration page

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="#">About</a></li>
                     <li class="nav-item"><a href="photography.html">Photography</a></li>
-                    <li class="nav-item"><a href="#">Illustrations</a></li>
+                    <li class="nav-item"><a href="illustrations.html">Illustrations</a></li>
                 </ul>
             </nav>
         </header>
