changed the gallery template for illustrations

--- a/illustrations.html
+++ b/illustrations.html
@@ -29,29 +29,42 @@
                 <h2>Magazines</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
             </div>
-            <section class="gallery-container">
+            <section class="gallery-container-magazine">
                 <div class="gallery-item">
                     <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-FSmagazine-1.pdf">
                         <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-FSmagazine-1.png" alt="magazine Formula Student December18" class="gallery-img">
                     </a>
+                </div>
+                <div class="gallery-item">
                     <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-FSmagazine-2.pdf">
                         <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-FSmagazine-2.png" alt="magazine Formula Student January19" class="gallery-img">
                     </a>
+                </div>
+                <div class="gallery-item">
                     <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-FSmagazine-3.pdf">
                         <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-FSmagazine-3.png" alt="magazine Formula Student March19" class="gallery-img">
                     </a>
+                </div>
+                <div class="gallery-item">
                     <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-FSmagazine-4.pdf">
                         <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-FSmagazine-4.png" alt="magazine Formula Student April19" class="gallery-img">
                     </a>
+                </div>
+                <div class="gallery-item">
                     <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-FSmagazine-5.pdf">
                         <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-FSmagazine-5.png" alt="magazine Formula Student August19" class="gallery-img">
                     </a>
+                </div>
+                <div class="gallery-item">
                     <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-breadBaking.pdf">
                         <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-breadBaking.png" alt="magazine Formula Student August19" class="gallery-img">
                     </a>
+                </div>
+                <div class="gallery-item w-2">
                     <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-yearbookCover.pdf">
                         <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-yearbookCover.png" alt="magazine Formula Student August19" class="gallery-img">
                     </a>
+                </div>
             </section>
             <p>test paragraph</p>
             <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/auxilliary/test.png" alt="testimage">
