--- a/photography.html
+++ b/photography.html
@@ -14,8 +14,8 @@
                 <h1 class="h-nav"><a href="index.html">Yannick Schulz</a></h1>
                 <ul class="nav-menu">
                     <li class="nav-item"><a href="#">About</a></li>
-                    <li class="nav-item"><a href="#">Photography</a></li>
-                    <li class="nav-item"><a href="#">Illustrations</a></li>
+                    <li class="nav-item"><a href="photography.html">Photography</a></li>
+                    <li class="nav-item"><a href="illustrations.html">Illustrations</a></li>
                 </ul>
             </nav>
         </header>            
