added illustration cover

--- a/illustrations.html
+++ b/illustrations.html
@@ -21,7 +21,7 @@
         </header>            
         <div class="coverphoto">
             <div class="coverphoto-photo">
-                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-photography-cover.jpg" alt="coverphoto silhouette holding a camera">
+                <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-illustrationCover.png" alt="coverphoto silhouette holding a camera">
             </div>
         </div>
         <main class ="gallery-page">
