added more illustrations and photos

--- a/illustrations.html
+++ b/illustrations.html
@@ -66,8 +66,36 @@
                     </a>
                 </div>
             </section>
-            <p>test paragraph</p>
-            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/auxilliary/test.png" alt="testimage">
+            <div class="textbox">
+                <h2>Scientific Illustrations</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
+            </div>
+            <section class="gallery-container">
+                <div class="gallery-item">
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-healthy.jpg" class="glightbox">
+                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-healthy.jpg" alt="vena galeni healthy" class="gallery-img">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-malicious.jpg" class="glightbox">
+                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-malicious.jpg" alt="vena galeni malicious" class="gallery-img">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-trombus.jpg" class="glightbox">
+                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-trombus.jpg" alt="trombus" class="gallery-img">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-malformation.jpg" class="glightbox"> 
+                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-malformation.jpg" alt="malformation" class="gallery-img">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-stent-3d.jpg" class="glightbox">
+                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-stent-3d.jpg" alt="stent 3d" class="gallery-img">
+                    </a>
+                </div>
         </main>
         <script src="js/glightbox.min.js"></script>
         <script type="text/javascript">
