--- a/photography.html
+++ b/photography.html
@@ -26,6 +26,27 @@
         </div>
         <main class ="gallery-page">
             <div class="textbox">
+                <h2>Staging</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
+            </div>
+            <section class="gallery-container">
+                <div class="gallery-item">
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-siblings.jpg" class="glightbox">
+                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-siblings.jpg" alt="motorcycle" class="gallery-img">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage1.jpg" class="glightbox">
+                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage1.jpg" alt="motorcycle" class="gallery-img">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage2.jpg" class="glightbox">
+                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-stage2.jpg" alt="motorcycle" class="gallery-img">
+                    </a>
+                </div>
+            </section>
+            <div class="textbox">
                 <h2>Motorcycles</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
             </div>
@@ -61,8 +82,21 @@
                     </a>
                 </div>
             </section>
-            <p>test paragraph</p>
-            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/auxilliary/test.png" alt="testimage">
+            <div class="textbox">
+                <h2>Product Photography</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
+            </div>
+            <section class="gallery-container">
+                <div class="gallery-item">
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel11.jpg" class="glightbox">
+                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel11.jpg" alt="motorcycle" class="gallery-img">
+                    </a>
+                </div>
+                <div class="gallery-item">
+                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel2.jpg" class="glightbox">
+                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel2.jpg" alt="motorcycle" class="gallery-img">
+                    </a>
+                </div>
         </main>
         <script src="js/glightbox.min.js"></script>
         <script type="text/javascript">
