added scroll snapping and refactored a few styles

--- a/illustrations.html
+++ b/illustrations.html
@@ -29,7 +29,7 @@
                 <h2>Magazines</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
             </div>
-            <section class="gallery-container-magazine">
+            <section class="gallery-container magazine">
                 <div class="gallery-item">
                     <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/pdf/yannick-schulz-FSmagazine-1.pdf">
                         <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-FSmagazine-1.png" alt="magazine Formula Student December18" class="gallery-img">
@@ -66,36 +66,39 @@
                     </a>
                 </div>
             </section>
-            <div class="textbox">
-                <h2>Scientific Illustrations</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
-            </div>
-            <section class="gallery-container">
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-healthy.jpg" class="glightbox">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-healthy.jpg" alt="vena galeni healthy" class="gallery-img">
-                    </a>
+            <section class="scroll-section">
+                <div class="textbox">
+                    <h2>Scientific Illustrations</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
                 </div>
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-malicious.jpg" class="glightbox">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-malicious.jpg" alt="vena galeni malicious" class="gallery-img">
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-trombus.jpg" class="glightbox">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-trombus.jpg" alt="trombus" class="gallery-img">
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-malformation.jpg" class="glightbox"> 
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-malformation.jpg" alt="malformation" class="gallery-img">
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-stent-3d.jpg" class="glightbox">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-stent-3d.jpg" alt="stent 3d" class="gallery-img">
-                    </a>
-                </div>
+                <section class="gallery-container">
+                    <div class="gallery-item">
+                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-healthy.png" class="glightbox">
+                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-healthy.png" alt="vena galeni healthy" class="gallery-img">
+                        </a>
+                    </div>
+                    <div class="gallery-item">
+                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-malicious.png" class="glightbox">
+                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-vena-galeni-malicious.png" alt="vena galeni malicious" class="gallery-img">
+                        </a>
+                    </div>
+                    <div class="gallery-item">
+                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-trombus.png" class="glightbox">
+                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-trombus.png" alt="trombus" class="gallery-img">
+                        </a>
+                    </div>
+                    <div class="gallery-item">
+                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-malformation.png" class="glightbox"> 
+                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-malformation.png" alt="malformation" class="gallery-img">
+                        </a>
+                    </div>
+                    <div class="gallery-item">
+                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-stent-3d.png" class="glightbox">
+                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/illustrations/yannick-schulz-stent-3d.png" alt="stent 3d" class="gallery-img">
+                        </a>
+                    </div>
+                </section>
+            </section>
         </main>
         <script src="js/glightbox.min.js"></script>
         <script type="text/javascript">
