--- a/photography.html
+++ b/photography.html
@@ -46,57 +46,62 @@
                     </a>
                 </div>
             </section>
-            <div class="textbox">
-                <h2>Motorcycles</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
-            </div>
-            <section class="gallery-container">
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" class="glightbox">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" alt="motorcycle" class="gallery-img">
-                    </a>
+            <section class="scroll-section">
+                <div class="textbox">
+                    <h2>Motorcycles</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
                 </div>
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike2.jpg" class="glightbox">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike2.jpg" alt="motorcycle" class="gallery-img">
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike3.jpg" class="glightbox">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike3.jpg" alt="motorcycle" class="gallery-img">
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike4.jpg" class="glightbox"> 
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike4.jpg" alt="motorcycle" class="gallery-img">
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike5.jpg" class="glightbox">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike5.jpg" alt="motorcycle" class="gallery-img">
-                    </a>
-                </div>
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike6.jpg" class="glightbox">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike6.jpg" alt="motorcycle" class="gallery-img">
-                    </a>
-                </div>
+                <section class="gallery-container">
+                    <div class="gallery-item">
+                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" class="glightbox">
+                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike1.jpg" alt="motorcycle" class="gallery-img">
+                        </a>
+                    </div>
+                    <div class="gallery-item">
+                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike2.jpg" class="glightbox">
+                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike2.jpg" alt="motorcycle" class="gallery-img">
+                        </a>
+                    </div>
+                    <div class="gallery-item">
+                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike3.jpg" class="glightbox">
+                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike3.jpg" alt="motorcycle" class="gallery-img">
+                        </a>
+                    </div>
+                    <div class="gallery-item">
+                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike4.jpg" class="glightbox"> 
+                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike4.jpg" alt="motorcycle" class="gallery-img">
+                        </a>
+                    </div>
+                    <div class="gallery-item">
+                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike5.jpg" class="glightbox">
+                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike5.jpg" alt="motorcycle" class="gallery-img">
+                        </a>
+                    </div>
+                    <div class="gallery-item">
+                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike6.jpg" class="glightbox">
+                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-bike6.jpg" alt="motorcycle" class="gallery-img">
+                        </a>
+                    </div>
+                </section>
             </section>
-            <div class="textbox">
-                <h2>Product Photography</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
-            </div>
-            <section class="gallery-container">
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel11.jpg" class="glightbox">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel11.jpg" alt="motorcycle" class="gallery-img">
-                    </a>
+            <section class="scroll-section">
+                <div class="textbox">
+                    <h2>Product Photography</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum similique explicabo eos dolores molestias nam eum sequi quam, rerum, aspernatur porro ea ullam labore consequuntur sed et quia officia perferendis!</p>
                 </div>
-                <div class="gallery-item">
-                    <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel2.jpg" class="glightbox">
-                        <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel2.jpg" alt="motorcycle" class="gallery-img">
-                    </a>
-                </div>
+                <section class="gallery-container">
+                    <div class="gallery-item">
+                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel11.jpg" class="glightbox">
+                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel11.jpg" alt="motorcycle" class="gallery-img">
+                        </a>
+                    </div>
+                    <div class="gallery-item">
+                        <a href="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel2.jpg" class="glightbox">
+                            <img src="https://media.githubusercontent.com/media/yschulz/yschulz.github.io/dev/img/photos/yannick-schulz-skalpel2.jpg" alt="motorcycle" class="gallery-img">
+                        </a>
+                    </div>
+                </section>
+            </section>
         </main>
         <script src="js/glightbox.min.js"></script>
         <script type="text/javascript">
