added sticky header

--- a/photography.html
+++ b/photography.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="css/glightbox.min.css">
     </head>
     <body>
-        <header>
+        <header id="site-header">
             <nav class="header-nav">
                 <h1 class="h-nav"><a href="index.html">Yannick Schulz</a></h1>
                 <ul class="nav-menu">
@@ -107,5 +107,6 @@
         <script type="text/javascript">
              const lightbox = GLightbox({ loop: true });
         </script>
+        <script src="js/scroll.js"></script>
     </body>
 </html>
