--- a/illustrations.html
+++ b/illustrations.html
@@ -9,11 +9,11 @@
         <link rel="stylesheet" href="css/glightbox.min.css">
     </head>
     <body>
-        <header>
+        <header id="site-header">
             <nav class="header-nav">
                 <h1 class="h-nav"><a href="index.html">Yannick Schulz</a></h1>
                 <ul class="nav-menu">
-                    <li class="nav-item"><a href="#">About</a></li>
+                    <li class="nav-item"><a href="about.html">About</a></li>
                     <li class="nav-item"><a href="photography.html">Photography</a></li>
                     <li class="nav-item"><a href="illustrations.html">Illustrations</a></li>
                 </ul>
@@ -104,5 +104,6 @@
         <script type="text/javascript">
              const lightbox = GLightbox({ loop: true });
         </script>
+        <script src="js/scroll.js"></script>
     </body>
 </html>
