--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <nav class="header-nav">
                 <h1 class="h-nav"><a href="index.html">Yannick Schulz</a></h1>
                 <ul class="nav-menu">
-                    <li class="nav-item"><a href="#">About</a></li>
+                    <li class="nav-item"><a href="about.html">About</a></li>
                     <li class="nav-item"><a href="photography.html">Photography</a></li>
                     <li class="nav-item"><a href="illustrations.html">Illustrations</a></li>
                 </ul>
